# KIST_MotorControl

./: CMakeLists.txt  README.md
soem/: ethc.cpp  ethc.h  realtime.cpp  shme.cpp  shme.h  slaveinfo.c  slaveinfo.h
test/linux/main/: CMakeLists.txt  main.cpp
test/linux/mtchkpa/: CMakeLists.txt  mtchkpa.cpp
test/linux/shm/: CMakeLists.txt  shm.cpp
